slider overflow fixed

--- a/assets/theme-styles/scss/block-styles.scss
+++ b/assets/theme-styles/scss/block-styles.scss
@@ -158,6 +158,7 @@
 
 // Gallery Slider
 .is-style-slider {
+    overflow: hidden;
 
     figure {
         position: relative;
